--- a/css/site.css
+++ b/css/site.css
@@ -3,6 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Saira+Semi+Condensed:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&family=Saira+Semi+Condensed:wght@100&display=swap');
 
+@font-face {
+font-family:mpdvga;
+src:url(../fonts/blockzone-webfont.woff2) format("woff2"),url(../fonts/blockzone-webfont.woff) format("woff");
+font-weight:400;
+font-style:normal
+}
+
 /* readable*/
 body {
   margin: 0 auto;
@@ -36,6 +43,7 @@ body > header {
 }
 
 h2 {
+  font-family: mpdvga,monospace;
   margin-top: 1em;
   padding-top: 1em;
 }
@@ -57,6 +65,7 @@ strong {
   color: #333;
 }
 
+ 
 code,
 pre {
   background: #eee;
