--- a/theme/static/css/site.css
+++ b/theme/static/css/site.css
@@ -4,13 +4,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&family=Saira+Semi+Condensed:wght@100&display=swap');
 
 @font-face {
-font-family:mpdvga;
-src:url(../fonts/blockzone-webfont.woff2) format("woff2"),url(../fonts/blockzone-webfont.woff) format("woff");
-font-weight:400;
-font-style:normal
+  font-family:mpdvga;
+  src:url(../fonts/blockzone-webfont.woff2) format("woff2"),url(../fonts/blockzone-webfont.woff) format("woff");
+  font-weight:400;
+  font-style:normal
 }
 
-/* readable*/
 body {
   margin: 0 auto;
   max-width: 50em;
@@ -18,6 +17,19 @@ body {
   font-size: 16px;
   line-height: 1.5;
   padding: 4em 1em;
+}
+
+section figure {
+    margin-top: 1.5em;
+}
+
+figure > img {
+    max-width: 100%;
+    height: auto;
+    margin-right: 2rem;
+    margin-bottom: 1rem;
+    border: 1px solid #000;
+    box-shadow: 1px 2px 5px black;
 }
 
 header#preamble {
@@ -64,7 +76,6 @@ h2,
 strong {
   color: #333;
 }
-
  
 code,
 pre {
@@ -92,7 +103,7 @@ section.post-list ul {
 }
 
 section.post-list li .timestamp::after {
-  content: " »";
+  content: " \00BB";
 }
 
 footer {
@@ -100,19 +111,6 @@ footer {
     font-size: 12px;
     border-top: 1px solid #eee;
     color: #666;
-}
-
-section figure {
-    margin-top: 1.5em;
-}
-
-figure img {
-    max-width: 100%;
-    height: auto;
-    margin-right: 2rem;
-    margin-bottom: 1rem;
-    border: 1px solid #000;
-    box-shadow: 1px 2px 5px black;
 }
 
 .org-src-container, pre.example {
