--- a/theme/templates/layout.html
+++ b/theme/templates/layout.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-1687066-2"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1687066-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-1687066-2');
+  </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous">
   <link href="{{ url_for("static", file="css/site.css") }}" rel="stylesheet">
   <link rel="preload" href="{{ url_for("static", file="fonts/blockzone-webfont.woff2") }}" as="font" type="font/woff2" crossorigin>
