fix paths and prod variable

--- a/theme/templates/layout.html
+++ b/theme/templates/layout.html
@@ -32,7 +32,7 @@
       <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
         <i class="fa-brands fa-twitter"></i>
       </a>
-      <a title="RSS feed" id="atom" href="posts/rss.xml">
+      <a title="RSS feed" id="atom" href="{{ url_for("feed") }}">
         <i class="fa-solid fa-rss"></i>
       </a>
     </div>
